--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     }
   </style>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?e934dc85bfa73f2972b92b7fa49ff42c";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
 </head>
 <body>
     <div class="container">
